<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KOMOK</string>

    <string name="image_logo">KOMOK logo</string>
    <string name="button_swapface">Swap Face</string>
    <string name="button_cropface">Crop Face</string>
    <string name="button_mixface">Mix Face</string>
    <string name="button_help">Help</string>
    <string name="button_about">About</string>

    <string name="choose_title">Get image from</string>
    <string name="choose_camera">Camera</string>
    <string name="choose_gallery">Gallery</string>

    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm">Confirm Password</string>
    <string name="text_profile">Profile</string>
    <string name="text_verify">Verified</string>
    <string name="text_reset">Reset Password</string>
    <string name="text_change">Change Password</string>
    <string name="text_old_pass">Old Password</string>
    <string name="text_new_pass">New Password</string>
    <string name="text_confirm_new">Confirm New Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_forgot">Forgot password?</string>
    <string name="button_verify">Resend email verification</string>
    <string name="button_change">Change password</string>
    <string name="button_logout">Logout</string>

    <string name="title_swapface">KOMOK\nSwap Face</string>
    <string name="title_cropface">KOMOK\nCrop Face</string>
    <string name="title_mixface">KOMOK\nMix Face</string>
    <string name="title_help">KOMOK\nHelp</string>
    <string name="title_about">KOMOK\nAbout</string>

    <string name="image_preview">Image</string>
    <string name="text_info">Face Detector</string>
    <string name="button_duplicate">Duplicate</string>
    <string name="button_swap">Swap</string>
    <string name="button_list">Mix List</string>
    <string name="button_edit">Swap Setting</string>

    <string name="desc_button_back">Button Back</string>
    <string name="desc_button_watermark">Button Watermark</string>
    <string name="desc_button_help">Button Help</string>
    <string name="desc_button_setting">Button Face Detector Setting</string>
    <string name="desc_button_change">Button Change Image</string>
    <string name="desc_button_save">Button Save Image Result</string>
    <string name="desc_button_share">Button Share Image Result</string>
    <string name="desc_button_shape">Button Change Crop Shape</string>
    <string name="desc_button_email">Button Send Email to KOMOK</string>

    <string name="A">[A]</string>
    <string name="B">[B]</string>
    <string name="C">[C]</string>
    <string name="D">[D]</string>
    <string name="E">[E]</string>
    <string name="F">[F]</string>
    <string name="G">[G]</string>
    <string name="H">[H]</string>

    <string name="help_swap"><b>Swap Face</b> is a feature that can swap detected faces* in an image automatically.\n
    *Face detector in Swap Face is set to the highest, so it will only detect faces that met some requirements\n\n
    <b>Step to Swap Face</b> (1-7) :\n
    1) Select an image with faces in it\n
    2) KOMOK will detect faces in the image, the detection information can be seen in <b>[A]</b>\n
    3) - If no face is found, you need to replace the image with another image by using the <b>[B]</b> button\n
       - If found at least two faces, you will be able to duplicate faces and swap faces\n
    4) Press button <b>[C]</b> to open options, to select which faces you do not want to crop or vice versa\n
    5) Press button <b>[D]</b> to duplicate or button <b>[E]</b> to swap\n
    6) Press button <b>[F]</b> to remove or add watermark to the image\n
    7) Now, you can save the swap results with button <b>[G]</b> or share it with button <b>[H]</b>
    </string>

    <string name="help_crop"><b>Crop Face</b> is a feature that can crop faces in an image automatically.\n\n
    <b>Step to Crop Face</b> (1-7) :\n
    1) Select an image with faces in it\n
    2) KOMOK will detect faces in the image, the detection information can be seen in <b>[A]</b>\n
    3) - If no face is found, you need to replace the image with another image by using the <b>[B]</b> button\n
       - If found at least one face, you will be able to crop the face\n
    4) Press button <b>[C]</b> to open options, to select which faces you do not want to crop or vice versa\n
    5) Press button <b>[D]</b> to change crop shape\n
    6) Slide slider <b>[E]</b> to resize crop shape\n
    7) Now, you can save the crop results with button <b>[F]</b>
    </string>

    <string name="help_mix"><b>Mix Face</b> is a feature that can add some stickers to faces in image.\n\n
    <b>Step to Mix Face</b> (1-6) :\n
    1) Select an image with faces in it\n
    2) KOMOK will detect faces in the image, the detection information can be seen in <b>[A]</b>\n
    3) - If no face is found, you need to replace the image with another image by using the <b>[B]</b> button\n
       - If found at least one face, you will be able to mix faces\n
    4) Press button <b>[C]</b> to add sticker to face in image\n
    5) Press button <b>[D]</b> to adjust the added stickers\n
    6) Now, you can save the mix results with button <b>[E]</b> or share it with button <b>[F]</b>
    </string>

    <string name="about">
        Version 1.2
        \n
        \nDeveloped by Team C
        \nMobile Computing UNJ
    </string>
    <string name="footer">Copyright © 2020</string>
</resources>