<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_logo"
        android:src="@drawable/komok_logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/button_user"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background_gray"
        android:text="@string/button_login"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <Button
        android:id="@+id/button_swap"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_space"
        android:background="@drawable/button_border"
        android:text="@string/button_swapface"
        android:textColor="@android:color/white"

        app:layout_constraintStart_toStartOf="@+id/button_user"
        app:layout_constraintTop_toBottomOf="@+id/button_user" />

    <Button
        android:id="@+id/button_crop"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_space"
        android:background="@drawable/button_border"
        android:text="@string/button_cropface"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="@+id/button_user"
        app:layout_constraintTop_toBottomOf="@+id/button_user" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_space"
        android:background="@drawable/button_border"
        android:text="@string/button_help"

        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/button_swap"
        app:layout_constraintTop_toBottomOf="@+id/button_swap" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_space"
        android:background="@drawable/button_border"
        android:text="@string/button_about"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="@+id/button_crop"
        app:layout_constraintTop_toBottomOf="@+id/button_crop" />

    <Button
        android:id="@+id/button_mix"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_space"
        android:background="@drawable/dialog_background_gray"
        android:text="@string/button_mixface"
        android:textColor="@android:color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about" />

</androidx.constraintlayout.widget.ConstraintLayout>