<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropActivity">

    <TextView
        android:id="@+id/text_title"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_cropface"
        android:textAlignment="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:contentDescription="@string/desc_button_back"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:background="@null"
        android:drawableEnd="@drawable/button_back"

        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_help"
        android:contentDescription="@string/desc_button_help"
        android:layout_width="38dp"
        android:layout_height="0dp"
        android:background="@null"
        android:drawableStart="@drawable/button_help"

        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:contentDescription="@string/image_preview"

        app:layout_constraintBottom_toTopOf="@+id/text_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_info"
        style="@style/text_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_info"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_setting"
        android:contentDescription="@string/desc_button_setting"
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:drawableStart="@drawable/button_setting"

        app:layout_constraintBottom_toBottomOf="@+id/text_info"
        app:layout_constraintEnd_toEndOf="@+id/text_info"
        app:layout_constraintTop_toTopOf="@+id/text_info" />

    <Button
        android:id="@+id/button_change"
        android:contentDescription="@string/desc_button_change"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/button_gallery"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_shape"
        android:contentDescription="@string/desc_button_shape"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/button_shapebox"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_change" />

    <SeekBar
        android:id="@+id/bar_size"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_border"
        android:progressTint="@android:color/white"
        android:thumbTint="@android:color/white"
        android:max="150"
        android:progress="20"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save"
        app:layout_constraintStart_toEndOf="@+id/button_shape"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />

    <Button
        android:id="@+id/button_save"
        android:contentDescription="@string/desc_button_save"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/button_save"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>