<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/text_change"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/dialog_background_white"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password0"
            app:hintTextColor="@android:color/black"
            app:passwordToggleEnabled="true"
            android:textColorHint="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password0"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/text_old_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password1"
            app:hintTextColor="@android:color/black"
            app:passwordToggleEnabled="true"
            android:textColorHint="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/text_new_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password2"
            app:hintTextColor="@android:color/black"
            app:passwordToggleEnabled="true"
            android:textColorHint="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_password2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/text_confirm_new"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading_change"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/button_change"
            style="@style/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_change"
            android:background="@color/buttonLogin"
            android:paddingTop="5dp"/>

        <Button
            android:id="@+id/button_profile"
            style="@style/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_profile"
            android:background="@color/buttonRegister"
            android:paddingTop="5dp"/>

    </LinearLayout>

</LinearLayout>